<resources>
    <string name="app_name">Vitabit</string>
    <string name="space">&#160;</string>
    <string name="ent_name">Group Name</string>
    <string name="ent_address">Group Address</string>
    <string name="update_title">Notice</string>
    <string name="update_message">Discover the new version already exists on the SD card, if not by downloading directly from the local installation?</string>
    <string name="edit_target">Edit target</string>
    <string name="record_weight">Record weight</string>
    <string name="distance_to_goal">Distance to goal</string>
    <string name="achieve_target">Congratulations on reaching your goal</string>
    <string name="login_activity_wechat">请安装微信客户端</string>
    <string name="login_activity_wechat_success">Authorization successful</string>
    <string name="login_activity_wechat_fail">Authorization failed</string>
    <string name="login_activity_wechat_cancle">Deauthorize</string>
    <string name="data_by_week">Weekly Data</string>
    <string name="data_by_month">Monthly Data</string>
    <string name="data_by_year">Year Data</string>
    <string name="change_weight_activity">Modify Weight</string>
    <string name="weight">Weight</string>
    <string name="date">Date:</string>
    <string name="body_activity">"Body Settings"</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="summarizing_data">loading...</string>
    <string name="get_code">GetCode</string>
    <string name="synchronized_to_device">Synchronized to the device</string>
    <string name="choose_date">Please select repeat cycle</string>
    <string name="send_confirm">We will send messages to</string>
    <string name="send">SEND</string>
    <string name="privacy_clause">Privacy clause</string>
    <string name="common_problem">common problem</string>
    <string name="service_provision">Service provision</string>
    <string name="group_details">Group details</string>
    <string name="password_modification_success">Password modification success</string>
    <string name="save_settings_successfully">Save settings successfully</string>
    <string name="saved_to_local">Saved to local</string>
    <string name="effective_time_is_invalid">Effective time is invalid</string>
    <string name="getting_version_information">Getting version information</string>
    <string name="update_firmware">Update Firmware</string>
    <string name="being_written">Updating</string>
    <string name="start_upgrading">Download completed, start upgrading</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Mailbox</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="error_field_required">This field is required</string>
    <string name="login_message"><u>Log in via SMS</u></string>
    <string name="login_email"><u>Log in via EMAIL</u></string>
    <string name="login_QQ">Log in via QQ ID</string>
    <string name="login_wechat">Log in via QQ ID</string>
    <string name="comeback">Back</string>
    <string name="login_forgetpwd"><u>Forgot password</u></string>
    <string name="login_phone_pwd">6~20 digit password</string>
    <string name="login_phone_pwd1">Password</string>
    <string name="login_phone_phonenumber">Your phone number</string>
    <string name="login_support_country">China</string>
    <string name="login_content_1">使用连爱,即表示您同意连爱的</string>
    <string name="login_content_2"><u>使用条款</u></string>
    <string name="login_content_3"><u>和</u></string>
    <string name="login_content_4"><u>隐私政策</u></string>
    <string name="login_yanzhengma">Enter verification code</string>
    <string name="login_from_email">Your email address</string>
    <string name="login_other"><u>Sign in via other account</u></string>
    <string name="login_erification_code">verification code</string>
    <string name="login_yanzhen_phone">checking...</string>
    <string name="login_error1">PhoneNumber cannot be empty</string>
    <string name="login_error2">Please enter the correct mailbox format</string>
    <string name="login_error3">Password can not be empty</string>
    <string name="login_error4">Passwords and user names do not match</string>
    <string name="codeisincorrect">code is incorrect or expired</string>
    <string name="login_error5">Network error, please check the network after re login</string>
    <string name="login_error6">Number entered is not correct</string>
    <string name="login_error7">Email cannot be empty</string>
    <string name="login_error8">Account does not exist</string>
    <string name="login_error9">Verification code is the 4 digit</string>
    <string name="login_error10">This number has already been registered.</string>
    <string name="login_error11">Nickname cannot be empty</string>
    <string name="changeinfo">Submitting to server</string>
    <string name="changeinfook">Successful modification</string>
    <string name="myfans">Follower</string>
    <string name="myattention">Follow</string>
    <string name="my_message">Message</string>
    <string name="find_friend">New friend</string>
    <string name="near_people">Nearby</string>
    <string name="find_qunzu">Group</string>
    <string name="attention_activity_title">Follow</string>
    <string name="loadmore">Pull down to load more...</string>
    <string name="nick_name">Name</string>
    <string name="account">Account</string>
    <string name="pwd">Password</string>
    <string name="sex">Gender</string>
    <string name="birthday">Birthday</string>
    <string name="lenth">Height</string>
    <string name="sign">Personal State Message</string>
    <string name="address">Region</string>
    <string name="pesonal_activity_title">Profile</string>
    <string name="friendinfo_activity_title">Contacts</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="lastmonth">Last Month</string>
    <string name="thismonth">This Month</string>
    <string name="lastweek">Last Week</string>
    <string name="thisweek">This Week</string>
    <string name="lastyear">Last Year</string>
    <string name="thisyear">This Year</string>
    <string name="cal_title">CAL</string>
    <string name="count_title">Time Spent</string>
    <string name="step_count">Total Steps</string>
    <string name="distance_count">Distance Count</string>
    <string name="shujumingxi">Data Detail</string>
    <string name="monday">monday</string>
    <string name="tuesday">tuesday</string>
    <string name="wednesday">wednesday</string>
    <string name="thursday">thursday</string>
    <string name="friday">friday</string>
    <string name="saturday">saturday</string>
    <string name="sunday">sunday</string>
    <string name="mon">Mon</string>
    <string name="tues">Tues</string>
    <string name="wed">Wed</string>
    <string name="thurs">Thur</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="sun">Sun</string>
    <string name="imageView">imageView</string>
    <string name="menu_goal">Goal Setting</string>
    <string name="menu_Portal">Visit Portal</string>
    <string name="menu_connect">Connect to Vitabit</string>
    <string name="menu_more">More</string>
    <string name="Incoming_tel_title">Call reminder</string>
    <string name="firmware_update_title"> Firmware update</string>
    <string name="move_device_title"> Delete device</string>
    <string name="bracelet_owner"></string>
    <string name="title_activity_long_sit">LongSitActivity</string>
    <string name="title_activity_hand_up">HandUpActivity</string>
    <string name="title_activity_incoming_tel">IncomingTel</string>
    <string name="title_activity_power">PowerActivity</string>
    <string name="title_activity_firmware_update">FirmwareUpdateActivity</string>
    <string name="title_activity_ranking">RankingActivity</string>
    <string name="title_activity_move_device">MoveDeviceActivity</string>
    <string name="longsit_dialog_title">Time setting</string>
    <string name="general_next">Next</string>
    <string name="general_prompt">Prompt</string>
    <string name="general_got_it">Got it</string>
    <string name="general_ok">OK</string>
    <string name="general_save">Save</string>
    <string name="general_cancel">Cancel</string>
    <string name="general_yes">Yes</string>
    <string name="general_no">No</string>
    <string name="general_look">Look</string>
    <string name="general_error">Error</string>
    <string name="general_faild">Failed</string>
    <string name="general_change">Change</string>
    <string name="general_retry">Retry</string>
    <string name="general_loading">Loading...</string>
    <string name="general_network_faild">Network is not stable, pls try again!</string>
    <string name="general_clouding">Synchronizing...</string>
    <string name="general_clouding_success">Synchronized complete</string>
    <string name="general_clouding_failure">Synchronized fail</string>
    <string name="general_wait">Wait...</string>
    <string name="general_about">About</string>
    <string name="general_send">Sending...</string>
    <string name="general_share">Share</string>
    <string name="general_invild">Invalid</string>
    <string name="general_delete">Delete</string>
    <string name="general_not_delete">Can not Delete</string>
    <string name="general_back">Back</string>
    <string name="general_tip">Tip</string>
    <string name="general_male">Male</string>
    <string name="general_more">More</string>
    <string name="general_no_more_data">No more data</string>
    <string name="general_null_data">No more data</string>
    <string name="general_female">Female</string>
    <string name="general_submitting">Submitting...</string>
    <string name="general_nodata">no records</string>
    <string name="general_sport">Sport</string>
    <string name="general_sleep">Sleep</string>
    <string name="general_uploading">Downloading...</string>
    <string name="general_null_label">This guy say nothing</string>
    <string name="general_dialog_sync_text">{0}% complete({2} out of {1} data points have been downloaded)</string>
    <string name="general_sync_time">{0}, {1}tips</string>
    <string name="general_sycing">Synchronizing...</string>
    <string name="general_sync_end">Synchronization is complete</string>
    <string name="general_setting">setting</string>
    <string name="app_start">Welcome to Linkloving</string>
    <string name="login_form_title">Login Linkloving</string>
    <string name="login_form_hint_loginname">Email</string>
    <string name="login_form_hint_loginpassword">Password</string>
    <string name="login_form_btn_register">REGISTER</string>
    <string name="login_form_btn_login">LOGIN</string>
    <string name="login_form_logining">Logging...</string>
    <string name="alarm_notify">Alarms</string>
    <string name="wurao_notify">Do not disturb</string>
    <string name="xiaoxi_notify">Notifications</string>
    <string name="find_device">Find Device</string>
    <string name="long_sit_text">Inactive Alert</string>
    <string name="power_setting">Power Mode</string>
    <string name="brace_version">Firmware Vision</string>
    <string name="bracelet_battery">Battery {0}%</string>
    <string name="whats_up_history_add">Send</string>
    <string name="code_title">Please enter code</string>
    <string name="code_enter_hint">code</string>
    <string name="choosestart">Choose start time and end time</string>
    <string name="starttime">Start time</string>
    <string name="endtime">End time</string>
    <string name="Describe">Describe your problem here.</string>
<string name="Send">Send</string>
</resources>