<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@color/gray_for_background"
    android:layout_height="match_parent">
    <TextView
        android:textColor="@color/black"
        android:textSize="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choosestart"
        />
    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/starttime"
            android:background="@color/white"
            android:clickable="true"
            android:hint="@string/starttime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/endtime"
            android:background="@color/white"
            android:clickable="true"
            android:hint="@string/endtime"
            android:layout_marginLeft="70dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <EditText
        android:id="@+id/feedbacktext"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:hint="@string/Describe"
        android:layout_width="match_parent"
        android:layout_height="300dp" />
    <Button
        android:id="@+id/send"
        android:textAllCaps="false"
        android:text="@string/Send"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>
